# desktop-mcp

./: .mcp.json  Cargo.toml  README.md  llm-pointing-support.md  promt.md  report.md  rust-mcp-framework.md  wayland-compositor-library.md
.devcontainer/: devcontainer.json
src/: a11y.rs  comp.rs  daemon.rs  ipc.rs  keys.rs  main.rs  mcp.rs  monitor.rs  render.rs  tracker.rs  x11ping.rs
