[package]
name = "desktop-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
atspi = { version = "0.30.0", features = ["tokio"] }
axum = "0.8.9"
base64 = "0.22.1"
clap = { version = "4.6.1", features = ["derive"] }
schemars = "1.0"
image = { version = "0.25.10", default-features = false, features = ["png"] }
rmcp = { version = "2.1.0", features = ["server", "transport-streamable-http-server"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
smithay = { version = "0.7.0", default-features = false, features = ["desktop", "renderer_pixman", "wayland_frontend", "xwayland"] }
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
libc = "0.2"
zbus = { version = "5", default-features = false, features = ["tokio"] }

[profile.dev]
opt-level = 2

[profile.dev.package."*"]
opt-level = 2
